--- a/pom.xml
+++ b/pom.xml
@@ -28,28 +28,43 @@
         <lighthouse.version>c50f88e</lighthouse.version>
         <singyeong.version>03eaacc</singyeong.version>
         <logback.version>1.2.3</logback.version>
+        <sentry.version>1.7.5</sentry.version>
     </properties>
 
     <dependencies>
+        <!-- catnip -->
         <dependency>
             <groupId>com.github.mewna</groupId>
             <artifactId>catnip</artifactId>
             <version>${catnip.version}</version>
         </dependency>
+
+        <!-- lighthouse -->
         <dependency>
             <groupId>com.github.mewna</groupId>
             <artifactId>lighthouse</artifactId>
             <version>${lighthouse.version}</version>
         </dependency>
+
+        <!-- singyeong -->
         <dependency>
             <groupId>com.github.singyeong</groupId>
             <artifactId>java-client</artifactId>
             <version>${singyeong.version}</version>
         </dependency>
+
+        <!-- logback -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+
+        <!-- Sentry -->
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry</artifactId>
+            <version>${sentry.version}</version>
         </dependency>
     </dependencies>
 
