--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,9 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
                 <version>3.6.1</version>
             </plugin>
