--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <catnip.version>1.2.0</catnip.version>
+        <catnip.version>06af1cb</catnip.version>
         <catnip-utilities.version>360b876</catnip-utilities.version>
         <singyeong.version>8dd40df</singyeong.version>
         <logback.version>1.2.3</logback.version>
