--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <catnip.version>1.3.0</catnip.version>
+        <catnip.version>1a39f20</catnip.version>
         <vertx.version>3.7.0</vertx.version>
         <singyeong.version>75ab2c5</singyeong.version>
         <yangmal.version>7679a38</yangmal.version>
